[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rby1_realtime"
version = "0.0.1"
description = "RBY1 control wrapper"
authors = [
    {name = "Justin Yu", email = "yujustin@berkeley.edu"},
]
license = {text = "MIT Software License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "viser",
    "tyro",
    "mujoco",
    "mink",
    "dm-env==1.6",
    "qpsolvers[osqp]",

]

[tool.setuptools.packages.find]
exclude = ["catkin_ws*"]